tests/good/error.lat
int main()
{
    error();
    printInt(5);
}