tests/bad/structs/2.lat
class A {
    int z;
}

int main() {
    B a;
    return 0;
}